Fix vertical alignment of labels in recipe header
Previously, if a value in the recipe header wrapped onto more than one
line, the label would be aligned with the bottom edge of the final line
whereas we want it to align with the bottom edge of the first line.

--- a/src/Buttercup.Web/styles/recipe-header.less
+++ b/src/Buttercup.Web/styles/recipe-header.less
@@ -11,6 +11,6 @@
   td,
   th {
     padding-bottom: @small-padding;
-    vertical-align: bottom;
+    vertical-align: baseline;
   }
 }
